# Argus

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  START-ARGUS.bat  alembic.ini  argus-launcher.py  deploy-argus.ps1  deploy-argus.sh  deploy.ps1  mkdocs.yml  otel-collector-config.yaml  pyproject.toml  pytest.ini  quickstart.sh  requirements-alembic.txt  requirements-observability.txt  requirements-security.txt  test_pii_and_tenant.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  unified-docs-portal.yml
alembic/: env.py
alembic/versions/: 001_baseline_schema.py
argus/: __init__.py  cli.py  demo.py  health.py
config/: openssl-dashboard.cnf  openssl-filebeat.cnf  openssl-indexer.cnf  openssl-manager.cnf  openssl-root-ca.cnf
config/alertmanager/: alertmanager.yml
config/filebeat/: filebeat.yml
config/prometheus/: prometheus.yml
config/simulation/: default-environment.json
config/suricata/: suricata.yaml
config/wazuh-dashboard/: opensearch_dashboards.yml
config/wazuh-indexer/: opensearch.yml
config/zeek/: local.zeek
dashboard/: app.py
dashboard/templates/: index.html
datasets/: README.md
datasets/CICIDS2017/: DATASET_VALIDATION_REPORT.md  README.md  validate_dataset.py
docker-compose/: README.md  ai-services.yml  dev-environment.yml  integrated-stack.yml  monitoring-stack.yml  network-analysis-stack.yml  phase1-siem-core-windows.yml  phase1-siem-core.yml  phase2-soar-stack.yml
docs/: api-reference.md  architecture.md  changelog.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  ml-models.md  research.md  security.md  services.md  swarm-simulation.md  troubleshooting.md
evaluation/: baseline_models_report.md  classification_report_decision_tree.txt  classification_report_random_forest.txt  classification_report_xgboost.txt  metrics.json
k8s/ai-services/: alert-triage.yaml  configmap.yaml  correlation-engine.yaml  feedback-service.yaml  kustomization.yaml  namespace.yaml  rag-service.yaml  redis.yaml  response-orchestrator.yaml  rule-generator.yaml  secrets.yaml  wazuh-integration.yaml
ml_training/: Dockerfile  Dockerfile.production  README.md  docker-compose.inference.yml  inference_api.py  requirements.txt  synthetic_evaluation.py  test_inference_api.py  train_ids_model.py  verify_deployment.py
models/: README.md  download_models.sh
scripts/: demo_compose.yml  generate-certs.ps1  generate-certs.sh  generate_secure_credentials.py  setup-configs.sh
services/: README.md
services/alert-triage/: Dockerfile  README.md  config.py  context_manager.py  llm_client.py  main.py  ml_client.py  models.py  pii_redaction.py  requirements.txt
services/common/: __init__.py  auth.py  cache.py  integration.py  middleware.py  pipeline.py  rate_limit.py  roles.py  security.py  tracing.py
services/correlation-engine/: Dockerfile  actions.py  config.py  database.py  main.py
services/feedback-service/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt
services/rag-service/: Dockerfile  README.md  main.py  requirements.txt
terraform/: README.md
tests/: README.md  conftest.py  requirements.txt  test_security_audit.py  validate_tests.py
(+76 files in other folders)
