[project]
name = "argus"
version = "1.0.0"
description = "AI-Augmented SOC — ML intrusion detection, LLM alert triage, and automated response orchestration"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Ayoub Hamrouni"},
]
keywords = ["soc", "siem", "ids", "ml", "llm", "wazuh", "security", "intrusion-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.0",
    "structlog>=24.0",
    "redis>=8.0.1",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "slowapi>=0.1.9",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0",
    "isort>=5.13",
    "pylint>=3.0",
    "flake8>=7.0",
    "bandit>=1.7.5",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
demo = [
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
]
ml = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.scripts]
argus = "argus.cli:main"

[project.urls]
Homepage = "https://github.com/AyoubHamrouni/Argus"
Documentation = "https://argus.readthedocs.io"
Repository = "https://github.com/AyoubHamrouni/Argus"
Issues = "https://github.com/AyoubHamrouni/Argus/issues"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | env
  | __pycache__
  | datasets
  | models
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security tests",
    "browser: marks tests as browser/UI tests",
    "slow: marks tests as slow",
    "requires_ollama: marks tests requiring Ollama",
    "requires_docker: marks tests requiring Docker",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
